--- a/client/index.html
+++ b/client/index.html
@@ -56,6 +56,7 @@
       <script src="bower_components/angular-socket-io/socket.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
       <script src="bower_components/PlaygroundJS/build/playground.js"></script>
+      <script src="bower_components/pixi.js/bin/pixi.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
@@ -63,6 +64,9 @@
         <!-- build:js({.tmp,client}) app/app.js -->
         <script src="app/app.js"></script>
           <!-- injector:js -->
+          <script src="app/factories/Cursor/Cursor.js"></script>
+          <script src="app/factories/Player/Player.js"></script>
+          <script src="app/factories/zip/zip.js"></script>
           <script src="app/routes/account/account.js"></script>
           <script src="app/routes/account/login/login.js"></script>
           <script src="app/routes/account/settings/settings.js"></script>
@@ -70,9 +74,8 @@
           <script src="app/routes/admin/admin.js"></script>
           <script src="app/routes/game/game.js"></script>
           <script src="app/routes/main/main.js"></script>
-          <script src="app/services/AI/AI.js"></script>
+          <script src="app/services/BattleLog/BattleLog.js"></script>
           <script src="app/services/Game/Game.js"></script>
-          <script src="app/services/Player/Player.js"></script>
           <script src="components/auth/auth.js"></script>
           <script src="components/auth/user.js"></script>
           <script src="components/modal/modal.js"></script>
